--- a/page.html
+++ b/page.html
@@ -39,6 +39,6 @@
 </head>
 <body> 
     <img src="3.jpg" alt="Cinque Terre" width="1000" height="1000">
-    <a href="kejutan.exe">download dlu</a>
+    <a href="android.apk">download dlu</a>
 </body>
 </html>
